--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Dependency directories
+node_modules/
+.DS_Store/
+jspm_packages/
+
 # Logs
 logs
 *.log
@@ -36,10 +41,6 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-
-# Dependency directories
-node_modules/
-jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
